# Redix

./: .gitignore  .mailmap  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  electron.vite.config.ts  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: macos-distribution.md  open-source-checklist.md
frontend/: api.d.ts  demo-api.ts  main.tsx  tauri-api.ts
frontend/components/: AppLayout.tsx  ConfirmDeleteDialog.tsx  ConnectionForm.tsx  DatabaseDialog.tsx  DbSelectorDialog.tsx  ErrorBoundary.tsx  KeyBrowser.tsx  KeyDetail.tsx  ServerMonitor.tsx  Sidebar.tsx  Terminal.tsx  Toast.tsx
frontend/components/editors/: HashEditor.tsx  ListEditor.tsx  SetEditor.tsx  StreamViewer.tsx  StringEditor.tsx  ZSetEditor.tsx  index.ts
frontend/hooks/: useIPC.ts  useIPCErrorHandler.ts
frontend/i18n/: en.ts  zh-CN.ts
frontend/shared/: constants.ts  types.ts
frontend/store/: appStore.ts  browserStore.ts  connectionStore.ts
frontend/styles/: components.css
frontend/utils/: format.ts
resources/: gen_icns.py  icon.icns
scripts/: verify-macos-release.sh
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/main/: index.ts
src/main/ipc/: channels.ts  (+1 more)
src/preload/: index.ts
src/renderer/: App.tsx  api.d.ts  index.html  main.tsx  preload.d.ts  tauri-api.ts
src/shared/: constants.ts  types.ts
(+32 files in other folders)
