[package]
name = "redix"
version = "0.0.1"
description = "Redix Redis desktop client"
authors = ["Redix"]
edition = "2021"
license = "MIT"
repository = "https://github.com/qIsaac/Redix"
homepage = "https://github.com/qIsaac/Redix"

[lib]
name = "redix_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.23"
keyring = "3"
rand = "0.8"
redis = { version = "0.32", features = ["tokio-rustls-comp", "connection-manager", "cluster-async", "sentinel"] }
ring = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
tokio = { version = "1", features = ["sync", "time"] }
urlencoding = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
